Refactor privacy policy HTML structure and content

--- a/privacy.html
+++ b/privacy.html
@@ -1,79 +1,92 @@
 <!doctype html>
 <html lang="nl">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
+  <title>SocialBit – Privacy Policy | G-Bit</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SocialBit – Privacy Policy</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
+    h1, h2 { color: #1a1a1a; }
+    h1 { border-bottom: 3px solid #0a74da; padding-bottom: 0.3em; }
+    p, li { font-size: 1rem; }
+    ul { margin-left: 1.2em; }
+    .section { margin-bottom: 2em; }
+    .footer { font-size: 0.85rem; color: #666; margin-top: 3em; border-top: 1px solid #ddd; padding-top: 1em; }
+  </style>
 </head>
 <body>
+
   <h1>Privacy Policy – SocialBit</h1>
-  <p><strong>Laatst bijgewerkt:</strong> 2025-12-12</p>
 
-  <h2>1. Wie zijn wij?</h2>
-  <p>
-    SocialBit is een dienst van <strong>G-Bit BV</strong>, een ICT-bedrijf gevestigd te
-    Kleine Bollostraat 9, 3120 Tremelo, België (BTW: BE0685373393). :contentReference[oaicite:1]{index=1}
-    Contact: <a href="mailto:info@g-bit.be">info@g-bit.be</a>.
-  </p>
+  <div class="section">
+    <h2>1. Wie zijn wij?</h2>
+    <p>
+      SocialBit is een dienst van <strong>G-Bit BV</strong>, een Belgisch IT-bedrijf gespecialiseerd in digitale oplossingen,
+      webdevelopment, design en consultancy, gevestigd te Kleine Bollostraat 9, 3120 Tremelo, België (BTW BE0685373393).  
+      Contact: <a href="mailto:info@g-bit.be">info@g-bit.be</a>. :contentReference[oaicite:1]{index=1}
+    </p>
+  </div>
 
-  <h2>2. Wat doet SocialBit?</h2>
-  <p>
-    SocialBit biedt analytics- en dashboardfunctionaliteit voor social media content (bijv. TikTok),
-    waarbij klanten hun eigen officiële API-toegang koppelen. Data wordt alleen opgehaald met
-    toestemming en via de officiële API’s van de betreffende platformen.
-  </p>
+  <div class="section">
+    <h2>2. Wat is SocialBit?</h2>
+    <p>
+      SocialBit biedt klanten analytics voor hun social media content via officiële API’s (zoals TikTok) met expliciete
+      toestemming van de klant. Data wordt alleen verzameld via erkende kanalen.
+    </p>
+  </div>
 
-  <h2>3. Verwerkte gegevens</h2>
-  <p>
-    Afhankelijk van de gekoppelde API’s verwerken wij:
-  </p>
-  <ul>
-    <li>Accountidentificatoren en naam</li>
-    <li>Lijsten van postings/video’s</li>
-    <li>Metadata zoals views, likes, comments etc., afhankelijk van de API</li>
-    <li>Technische data (logs, timestamps) ter ondersteuning van werking en beveiliging</li>
-  </ul>
+  <div class="section">
+    <h2>3. Verwerkte gegevens</h2>
+    <ul>
+      <li>Basis account- en profielinformatie</li>
+      <li>Lijsten met eigen posts en metadata</li>
+      <li>Analytics zoals views, interacties, etc. (afhankelijk van API-scopes)</li>
+      <li>Technische en loggegevens (voor de werking van SocialBit)</li>
+    </ul>
+  </div>
 
-  <h2>4. Klanten-scheiding</h2>
-  <p>
-    Elke klant heeft een eigen afzonderlijke database en kan enkel toegang krijgen tot zijn/haar
-    eigen gegevens. Geen enkele klant kan de data van een andere klant inzien.
-  </p>
+  <div class="section">
+    <h2>4. Data-scheiding per klant</h2>
+    <p>
+      Elke klant werkt in een gescheiden omgeving. Data van één klant is nooit zichtbaar voor anderen.
+    </p>
+  </div>
 
-  <h2>5. Rechtsgrond (GDPR)</h2>
-  <p>
-    We verwerken persoonsgegevens op basis van een overeenkomst (dienstverlening aan de klant),
-    toestemming (OAuth/API-koppeling) of gerechtvaardigd belang (beveiliging).
-  </p>
+  <div class="section">
+    <h2>5. Rechtsgrond en GDPR</h2>
+    <p>
+      Wij verwerken persoonsgegevens op basis van de contractuele overeenkomst met de klant en de expliciete toestemming
+      die de klant geeft bij het koppelen van externe API’s (zoals TikTok). Wij handelen volgens de GDPR.
+    </p>
+  </div>
 
-  <h2>6. Bewaring</h2>
-  <p>
-    Data wordt bewaard zolang de klant een actief account heeft en voor maximaal 24 maanden
-    na beëindiging, tenzij wettelijke verplichtingen anders vereisen.
-  </p>
+  <div class="section">
+    <h2>6. Bewaringstermijn</h2>
+    <p>
+      Data wordt bewaard zolang de klant een actief contract heeft en maximaal 24 maanden daarna, tenzij andere wettelijke
+      verplichtingen gelden.
+    </p>
+  </div>
 
-  <h2>7. Delen met derden</h2>
-  <p>
-    We verkopen geen persoonsgegevens. Data wordt gedeeld met hosting- en operationele partners
-    die de werking mogelijk maken, en strikt volgens GDPR.
-  </p>
+  <div class="section">
+    <h2>7. Delen met derden</h2>
+    <p>
+      SocialBit deelt geen persoonsgegevens met derden voor commerciële doeleinden. Data kan gedeeld worden met
+      verwerkers die noodzakelijk zijn voor de werking (zoals hosting), met volledige naleving van GDPR.
+    </p>
+  </div>
 
-  <h2>8. Beveiliging</h2>
-  <p>
-    We passen technische beveiligingsmaatregelen toe, o.a. HTTPS, encryptie van API-keys,
-    gescheiden klantomgevingen en toegangsbewaking.
-  </p>
+  <div class="section">
+    <h2>8. Beveiliging</h2>
+    <p>
+      Wij zetten technische en organisatorische maatregelen in om je data te beschermen, zoals HTTPS, encryptie,
+      gescheiden klantomgevingen en toegangsbeveiliging.
+    </p>
+  </div>
 
-  <h2>9. Rechten</h2>
-  <p>
-    Klanten kunnen hun gegevens inzien, corrigeren of laten verwijderen zoals vereist onder
-    GDPR. Hiervoor contacteer je <a href="mailto:info@g-bit.be">info@g-bit.be</a>.
-  </p>
+  <div class="footer">
+    <p>© 2025 SocialBit – een dienst van G-Bit BV • Kleine Bollostraat 9, 3120 Tremelo, België • info@g-bit.be</p>
+  </div>
 
-  <h2>10. Officiële API voorwaarden</h2>
-  <p>
-    Gebruik van SocialBit valt ook onder de voorwaarden van de sociale platformen (zoals
-    TikTok) waarvan je data koppelt via API.
-  </p>
 </body>
 </html>
