Revise terms of service for improved readability
Updated the terms of service for clarity and consistency.

--- a/terms.html
+++ b/terms.html
@@ -1,70 +1,82 @@
 <!doctype html>
 <html lang="nl">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
+  <title>SocialBit – Terms of Service | G-Bit</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SocialBit – Terms of Service</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
+    h1, h2 { color: #1a1a1a; }
+    h1 { border-bottom: 3px solid #0a74da; padding-bottom: 0.3em; }
+    p, li { font-size: 1rem; }
+    ul { margin-left: 1.2em; }
+    .section { margin-bottom: 2em; }
+    .footer { font-size: 0.85rem; color: #666; margin-top: 3em; border-top: 1px solid #ddd; padding-top: 1em; }
+  </style>
 </head>
 <body>
+
   <h1>Terms of Service – SocialBit</h1>
-  <p><strong>Laatst bijgewerkt:</strong> 2025-12-12</p>
 
-  <h2>1. Definities</h2>
-  <p>
-    “SocialBit” = het analytics-platform geleverd door G-Bit BV (3120 Tremelo, België). :contentReference[oaicite:2]{index=2}
-    “Klant” = een organisatie of persoon die zich registreert en API’s koppelt.
-  </p>
+  <div class="section">
+    <h2>1. Definities</h2>
+    <p>
+      “SocialBit” verwijst naar het analytics-platform van G-Bit BV, gevestigd te Tremelo, België.  
+      “Klant” verwijst naar de gebruiker die zich registreert en API’s koppelt voor eigen accountdata.
+    </p>
+  </div>
 
-  <h2>2. Dienstverlening</h2>
-  <p>
-    SocialBit biedt data-analyse en dashboards op basis van social media API’s waarvoor de klant
-    zelf toegang verleent via officiële OAuth-methodes.
-  </p>
+  <div class="section">
+    <h2>2. Dienstverlening</h2>
+    <p>
+      SocialBit biedt data-analyse en dashboards op basis van API’s die de klant zelf koppelt via officiële methodes zoals
+      OAuth.
+    </p>
+  </div>
 
-  <h2>3. Toegestaan gebruik</h2>
-  <ul>
-    <li>Je gebruikt SocialBit enkel om analyses uit te voeren op data waarop je gerechtigd bent.</li>
-    <li>Je respecteert de API-voorwaarden van elk verbonden platform (bijv. TikTok).</li>
-    <li>Je probeerde geen beveiliging te omzeilen.</li>
-  </ul>
+  <div class="section">
+    <h2>3. Acceptatie voorwaarden</h2>
+    <p>
+      Door SocialBit te gebruiken accepteer je deze voorwaarden en de toepasselijke API-voorwaarden van gekoppelde platformen
+      (bijv. TikTok).
+    </p>
+  </div>
 
-  <h2>4. Klantverantwoordelijkheid</h2>
-  <ul>
-    <li>Je bent verantwoordelijk voor het beheer van jouw API-keys en tokens.</li>
-    <li>Je garandeert dat je de rechten hebt om de gekoppelde data te verwerken.</li>
-  </ul>
+  <div class="section">
+    <h2>4. Verantwoordelijkheden klant</h2>
+    <ul>
+      <li>Je bent zelf verantwoordelijk voor het beheer van API-keys en toegangstokens.</li>
+      <li>Je garandeert dat je gerechtigd bent de gekoppelde data te gebruiken.</li>
+      <li>Je respecteert de applicable wetgeving en de voorwaarden van de gekoppelde platformen.</li>
+    </ul>
+  </div>
 
-  <h2>5. Beschikbaarheid</h2>
-  <p>
-    Wij streven naar een stabiele dienst, maar garanderen geen ononderbroken werking. Wij kunnen
-    veranderingen doorvoeren in functionaliteit.
-  </p>
+  <div class="section">
+    <h2>5. Beschikbaarheid</h2>
+    <p>
+      SocialBit streeft naar betrouwbare beschikbaarheid, maar garandeert geen ononderbroken dienst.
+    </p>
+  </div>
 
-  <h2>6. Intellectueel eigendom</h2>
-  <p>
-    SocialBit (software + branding) blijft eigendom van G-Bit BV. Data blijft eigendom van de klant
-    of de bronplatformen.
-  </p>
+  <div class="section">
+    <h2>6. Intellectueel eigendom</h2>
+    <p>
+      Alle software en design van SocialBit zijn eigendom van G-Bit BV. Klantdata blijft eigendom van de klant en/of
+      het gekoppelde platform.
+    </p>
+  </div>
 
-  <h2>7. Aansprakelijkheid</h2>
-  <p>
-    SocialBit wordt geleverd “as-is”. Voor zover wettelijk toegestaan, is G-Bit BV niet aansprakelijk
-    voor indirecte schade of dataverlies.
-  </p>
+  <div class="section">
+    <h2>7. Aansprakelijkheid</h2>
+    <p>
+      SocialBit wordt geleverd “as-is”. G-Bit BV is, voor zover wettelijk toegestaan, niet aansprakelijk voor indirecte
+      schade, dataverlies of bedrijfsschade.
+    </p>
+  </div>
 
-  <h2>8. Beëindiging</h2>
-  <p>
-    Klanten kunnen hun account beëindigen. Wij kunnen toegang intrekken bij schending van de voorwaarden.
-  </p>
+  <div class="footer">
+    <p>© 2025 SocialBit – een dienst van G-Bit BV • info@g-bit.be • Kleine Bollostraat 9, 3120 Tremelo, België</p>
+  </div>
 
-  <h2>9. Toepasselijk recht</h2>
-  <p>
-    Deze voorwaarden vallen onder Belgisch recht.
-  </p>
-
-  <h2>10. Contact</h2>
-  <p>
-    Voor vragen: <a href="mailto:info@g-bit.be">info@g-bit.be</a>
-  </p>
 </body>
 </html>
